Move SdJwtCreationAndSigningTest back to core
Signed-off-by: Pascal Knüppel <pascal.knueppel@governikus.de>